--- a/constraint_demo.ipynb
+++ b/constraint_demo.ipynb
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "58feeb34",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "from src.constraints.constraint import FairnessConstraint\n",
-    "from src.constraints.constraint_fns import one_sided_loss_constr\n",
+    "from src.constraints.constraint_fns import loss_equality\n",
     "\n",
     "# the toy dataset\n",
     "features = torch.arange(0,10)\n",
@@ -50,7 +50,7 @@
     "c = FairnessConstraint(\n",
     "    dataset=dataset,\n",
     "    group_indices=group_indices,\n",
-    "    fn=one_sided_loss_constr,\n",
+    "    fn=loss_equality,\n",
     "    batch_size=2,\n",
     "    seed=42\n",
     ")"
@@ -66,17 +66,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "058dfa79",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[tensor([0]), tensor([0])], [tensor([8]), tensor([1])]]"
+       "[[tensor([0]), tensor([0])], [tensor([6]), tensor([1])]]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hc-vision",
+   "display_name": "hc-dev",
    "language": "python",
    "name": "python3"
   },
@@ -118,8 +118,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
