update api, fix bugs, add tutorial notebooks

--- a/experiments/algo_plots.ipynb
+++ b/experiments/algo_plots.ipynb
@@ -7,14 +7,14 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from utils.plotting import plot_time, plot_iter, plot_trajectories"
+    "from utils.plotting import plot_time, plot_sep, plot_trajectories"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Read results:**"
+    "**Read results**"
    ]
   },
   {
@@ -23,102 +23,173 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
-    "\n",
     "TASK = \"income\"\n",
     "STATE = \"OK\"\n",
     "DATASET = TASK + \"_\" + STATE\n",
-    "lb = 0.005\n",
-    "constraint = \"eq_loss\"\n",
+    "DATASET = TASK + \"_\" + STATE\n",
+    "loaded_models = []\n",
     "\n",
-    "algs = [\n",
-    "    \"SSLALM\",\n",
-    "    \"ALM\",\n",
-    "    \"StochasticGhost\",\n",
-    "    \"SGD\",\n",
-    "    \"fairret\",\n",
-    "]\n",
-    "stats = dict.fromkeys(algs)\n",
-    "results_dir = \"./utils/exp_results/\"\n",
-    "\n",
-    "for alg in algs:\n",
-    "    filename = os.path.join(results_dir, f\"{alg}_\" + f\"{DATASET}_{lb}.csv\")\n",
-    "    try:\n",
-    "        stats[alg] = pd.read_csv(filename)\n",
-    "    except:\n",
-    "        print(f\"{alg} not found in {results_dir}\")\n",
-    "\n",
-    "stats_train = {\n",
-    "    alg: s[s[\"is_train\"] == \"train\"].drop([\"is_train\"], axis=1).dropna()\n",
-    "    for alg, s in stats.items()\n",
-    "    if s is not None\n",
-    "}\n",
-    "stats_test = {\n",
-    "    alg: s[s[\"is_train\"] == \"test\"].drop([\"is_train\"], axis=1).dropna()\n",
-    "    for alg, s in stats.items()\n",
-    "    if s is not None\n",
+    "experiments_to_read = {\n",
+    "    'SSLALM': {'abs_loss_equality': 0.05},\n",
+    "    # 'SSLALM': {'loss_equality': 0.005},\n",
+    "    'SGD': {'loss_equality': 0.005},\n",
+    "    'SSG': {'loss_equality': 0.005},\n",
+    "    'StochasticGhost': {'loss_equality': 0.005},\n",
+    "    'fairret': {'loss_equality': 0.005},\n",
     "}"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Plots w.r.t. time"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "alg = \"SSLALM\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Train**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.makedirs(os.path.dirname(f\"./plots/{alg}/{DATASET}/\"), exist_ok=True)\n",
+    "from itertools import product\n",
+    "import os\n",
     "\n",
-    "f1tr_time = plot_time(\n",
-    "    stats_train[alg], lb, \n",
-    "    loss_col='Loss',\n",
-    "    c_col='C1',\n",
-    "    round_step=0.01,\n",
-    "    f_ylim=(0.4, 0.77),\n",
-    "    c_ylim=(-0.12, 0.12),\n",
-    "    add_lb=True,\n",
-    "    two_sided=True\n",
+    "# names = product(alg_list, constr_list, lb_list)\n",
+    "alg_states = {}\n",
+    "full_eval_train = {}\n",
+    "full_eval_test = {}\n",
+    "\n",
+    "for alg, con in experiments_to_read.items():\n",
+    "    for constraint, bound in con.items():\n",
+    "        FILE_EXT = \".pt\"\n",
+    "        dir = f\"./utils/exp_results/{constraint}\"\n",
+    "\n",
+    "        filename_state = os.path.join(dir, f\"{alg}_\" + f\"{DATASET}_{bound}.csv\")\n",
+    "        filename_full_train = os.path.join(dir, f\"AFTER_{alg}_\" + f\"{DATASET}_{bound}_train.csv\")\n",
+    "        filename_full_test = os.path.join(dir, f\"AFTER_{alg}_\" + f\"{DATASET}_{bound}_test.csv\")\n",
+    "        try:\n",
+    "            data_state = pd.read_pickle(filename_state).reset_index()\n",
+    "            data_full_train = pd.read_pickle(filename_full_train).reset_index()\n",
+    "            data_full_test = pd.read_pickle(filename_full_test).reset_index()\n",
+    "\n",
+    "            alg_states['__'.join([alg, constraint, str(bound)])] = data_state\n",
+    "            full_eval_train['__'.join([alg, constraint, str(bound)])] = data_full_train\n",
+    "            full_eval_test['__'.join([alg, constraint, str(bound)])] = data_full_test\n",
+    "\n",
+    "            print(f'loaded {alg} | {constraint} | {bound}')\n",
+    "        except FileNotFoundError: \n",
+    "            print(f'not found {alg} | {constraint} | {bound} at {dir}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "def explode_column(df, col, names, m):\n",
+    "    df[names] = list(\n",
+    "        df[col].map(\n",
+    "                    lambda x: [np.nan]*m if np.all(np.isnan(x)) else x \n",
+    "                    )\n",
+    "        )\n",
+    "\n",
+    "def aggregate_stats(live_stats, after_stats, constraint_bound):\n",
+    "    \"\"\"\n",
+    "    live_stats: states of the algorithm evaluated during run\n",
+    "    after_stats: statistics evaluated on full set after run\n",
+    "    \"\"\"\n",
+    "    live_stats.columns = live_stats.columns.map(lambda x: str(x) + '_live' if x == 'c' else x)\n",
+    "    after_stats.columns = after_stats.columns.map(lambda x: str(x) + '_full' if x == 'c' else x)\n",
+    "    # combine into one dataframe\n",
+    "    stats_joined = after_stats.set_index(['iteration', 'trial']).join(live_stats.set_index(['iteration', 'trial']), on=['iteration', 'trial'], how='inner',lsuffix='_full', rsuffix='_live')\n",
+    "    for col in stats_joined.columns:\n",
+    "        # change [list] into list\n",
+    "        if isinstance(stats_joined[col].iloc[0], list):\n",
+    "            stats_joined[col] = stats_joined[col].map(lambda x: x[0] if not np.all(np.isnan(x)) else x)\n",
+    "        # \"explode\" ndarray column into separate columns\n",
+    "        if isinstance(stats_joined[col].iloc[0], np.ndarray):\n",
+    "            if len(stats_joined[col].iloc[0].shape) == 1 and col in ['c_live', 'c_full']:\n",
+    "                m = len(stats_joined[col].iloc[0])\n",
+    "            \n",
+    "                explode_column(stats_joined, col, [f'{col}{i}' for i in range(m)], m)\n",
+    "                for i in range(m):\n",
+    "                    stats_joined[f'{col}{i}_corrected'] = stats_joined[f'{col}{i}'] + constraint_bound\n",
+    "\n",
+    "            # add norm for ndarray columns\n",
+    "            stats_joined[f'{col}_norm'] = stats_joined.apply(lambda x: np.linalg.norm(x[col]),axis=1)\n",
+    "\n",
+    "    stats_joined.dropna(axis=0, how='all', inplace=True, subset=[x for x in stats_joined.columns if x not in ['cb', 'time', 'constraint_name']])\n",
+    "\n",
+    "    # convert one-element ndarrays into floats\n",
+    "    for col in stats_joined.columns:\n",
+    "        if isinstance(stats_joined[col].iloc[0], np.ndarray):\n",
+    "            if stats_joined[col].iloc[0].ndim == 0 or stats_joined[col].iloc[0].ndim == 1 and stats_joined[col].iloc[0].shape[0] == 1:\n",
+    "                stats_joined[col] = stats_joined[col].astype(float)\n",
+    "\n",
+    "    stats_joined.reset_index(drop=False, inplace=True)\n",
+    "\n",
+    "    return stats_joined\n",
+    "\n",
+    "\n",
+    "data_train = {}\n",
+    "data_test = {}\n",
+    "\n",
+    "for name in full_eval_train.keys():\n",
+    "    data_train[name] = aggregate_stats(alg_states[name], full_eval_train[name], float(name.split('__')[-1]))\n",
+    "    data_test[name] = aggregate_stats(alg_states[name], full_eval_test[name], float(name.split('__')[-1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---\n",
+    "**Plot w.r.t. time**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from experiments.utils.plotting import plot_time\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "alg_name = 'SSLALM'\n",
+    "c = \"abs_loss_equality\"\n",
+    "cb = 0.05\n",
+    "alg = f\"{alg_name}__{c}__{cb}\"\n",
+    "data = data_train[alg]\n",
+    "\n",
+    "fl = plot_time(\n",
+    "    data,\n",
+    "    cb,\n",
+    "    loss_col='f_full',\n",
+    "    c_col='c_full0_corrected',\n",
+    "    two_sided=True,\n",
+    "    round_step=0.05,\n",
+    "    f_ylim=(0.35, 0.77),\n",
+    "    c_ylim=(-0.2, 0.2),\n",
+    "    sep_figs=False,\n",
+    "    add_lb=False,\n",
+    "    q1=0.25,\n",
+    "    q2=0.75,\n",
+    "    plot_loss=True\n",
     ")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "f1tr_time.savefig(f\"./plots/{alg}/{DATASET}/train_time_{DATASET}\")\n",
-    "print(f\"./plots/{alg}/{DATASET}/train_time_{DATASET}\")"
+    "---\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Test**"
+    "**Plot trajectories of each run w.r.t. iterations**"
    ]
   },
   {
@@ -127,64 +198,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f1t_time = plot_time(\n",
-    "    stats_test[alg], lb, \n",
-    "    loss_col='Loss',\n",
-    "    c_col='C1',\n",
-    "    round_step=0.01,\n",
-    "    f_ylim=(0.4, 0.77),\n",
-    "    c_ylim=(-0.12, 0.12),\n",
-    "    add_lb=True,\n",
-    "    two_sided=True\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f1t_time.savefig(f\"./plots/{alg}/{DATASET}/test_time_{DATASET}\")\n",
-    "print(f\"./plots/{alg}/{DATASET}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Trajectories during each run"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "traj = plot_trajectories(stats_train['SSLALM'], lb, \"iteration\", alpha=1, c_ylim=(-0.15, 0.15))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Test**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "traj = plot_trajectories(stats_test[alg], lb, \"iteration\", alpha=1, c_ylim=(-0.15, 0.15))"
+    "from experiments.utils.plotting import plot_sep\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "alg_name = 'SSLALM'\n",
+    "c = \"abs_loss_equality\"\n",
+    "cb = 0.05\n",
+    "alg = f\"{alg_name}__{c}__{cb}\"\n",
+    "data = data_train[alg]\n",
+    "\n",
+    "f, ax = plt.subplots(2,5)\n",
+    "if isinstance(ax, plt.Axes):\n",
+    "    ax = [ax]\n",
+    "ax_f = plot_sep(data, plot_col='f_full', idx_col='trial')\n",
+    "ax_f.set_figwidth(20)\n",
+    "for i, ax in enumerate(f.axes):\n",
+    "    plot_sep(data, plot_col=f'c_full{i}_corrected', idx_col='trial', ax=ax)\n",
+    "f.set_figwidth(30)\n",
+    "f.suptitle(alg_name)\n",
+    "for a in f.axes:\n",
+    "    a.hlines((-cb, cb), 0, a.get_xbound()[1])\n",
+    "    a.hlines(0, 0, a.get_xbound()[1])\n",
+    "    a.set_ylim((-cb*5, cb*5))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "humancompatible-dev",
+   "display_name": "hc-dev",
    "language": "python",
    "name": "python3"
   },
