--- a/experiments/model_plots.ipynb
+++ b/experiments/model_plots.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "import torch\n",
     "from torch import tensor\n",
-    "from utils.load_folktables import prepare_folktables\n",
+    "from utils.load_folktables import prepare_folktables, prepare_folktables_multattr\n",
     "from src.constraints.constraint_fns import *\n",
     "from fairret.statistic import *\n",
     "from utils.network import SimpleNet"
@@ -55,21 +55,26 @@
     "(\n",
     "    X_train,\n",
     "    y_train,\n",
-    "    [w_idx_train, nw_idx_train],\n",
+    "    group_ind_train,\n",
+    "    sep_group_ind_train,\n",
     "    X_test,\n",
     "    y_test,\n",
-    "    [w_idx_test, nw_idx_test],\n",
-    ") = prepare_folktables(\n",
+    "    group_ind_test,\n",
+    "    sep_group_ind_test,\n",
+    ") = prepare_folktables_multattr(\n",
     "    TASK,\n",
-    "    state=STATE,\n",
+    "    state=STATE.upper(),\n",
     "    random_state=42,\n",
-    "    make_unbalanced=False,\n",
     "    onehot=False,\n",
     "    download=True,\n",
-    ")\n",
-    "\n",
-    "sensitive_value_0 = \"white\"\n",
-    "sensitive_value_1 = \"non-white\""
+    "    sens_cols=[\n",
+    "        \"MAR\",\n",
+    "        # 'RAC1P',\n",
+    "        # 'SEX',\n",
+    "    ],\n",
+    "    binarize=[None],\n",
+    "    stratify=False,\n",
+    ")"
    ]
   },
   {
@@ -91,40 +96,7 @@
     "y_train_tensor = tensor(y_train, dtype=torch.float, device=device)\n",
     "\n",
     "X_test_tensor = tensor(X_test, dtype=torch.float, device=device)\n",
-    "y_test_tensor = tensor(y_test, dtype=torch.float, device=device)\n",
-    "\n",
-    "X_train_w = X_train_tensor[w_idx_train]\n",
-    "y_train_w = y_train_tensor[w_idx_train]\n",
-    "X_train_nw = X_train_tensor[nw_idx_train]\n",
-    "y_train_nw = y_train_tensor[nw_idx_train]\n",
-    "\n",
-    "X_test_w = X_test_tensor[w_idx_test]\n",
-    "y_test_w = y_test_tensor[w_idx_test]\n",
-    "X_test_nw = X_test_tensor[nw_idx_test]\n",
-    "y_test_nw = y_test_tensor[nw_idx_test]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"w, nw, total\")\n",
-    "print(\"train\")\n",
-    "print(len(y_train_w), len(y_train_nw), len(y_train))\n",
-    "print(\n",
-    "    sum(y_train_w == 1) / len(y_train_w),\n",
-    "    sum(y_train_nw == 1) / len(y_train_nw),\n",
-    "    sum(y_train_tensor == 1) / len(y_train_tensor),\n",
-    ")\n",
-    "print(\"test\")\n",
-    "print(len(y_test_w), len(y_test_nw), len(y_test))\n",
-    "print(\n",
-    "    sum(y_test_w == 1) / len(y_test_w),\n",
-    "    sum(y_test_nw == 1) / len(y_test_nw),\n",
-    "    sum(y_test_tensor == 1) / len(y_test_tensor),\n",
-    ")"
+    "y_test_tensor = tensor(y_test, dtype=torch.float, device=device)"
    ]
   },
   {
@@ -140,47 +112,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# directory to load models from\n",
+    "from itertools import product\n",
     "\n",
-    "LOSS_BOUND = 0.005\n",
+    "constraints = {\n",
+    "    'abs_loss_equality': 0.01,\n",
+    "    # \"loss_equality\": 0.005,\n",
+    "    \"unconstrained\": None,\n",
+    "}\n",
+    "\n",
+    "dict_alg_names = {\n",
+    "    \"StochasticGhost\": \"StGh\",\n",
+    "    \"ALM\": \"ALM\",\n",
+    "    \"SSLALM\": \"SSL-ALM\",\n",
+    "    \"SSG\": \"SSw\",\n",
+    "    \"SGD\": \"SGD\",\n",
+    "    \"fairret\": \"SGD-Fairret\",\n",
+    "}\n",
+    "\n",
     "DATASET = TASK + \"_\" + STATE\n",
-    "constraint = \"eq_loss\"\n",
-    "DIRECTORY_PATH = (\n",
-    "    \"./utils/saved_models/\"\n",
-    "    + DATASET\n",
-    "    + \"/\"\n",
-    "    + constraint\n",
-    "    + \"/\"\n",
-    "    + f\"{LOSS_BOUND:.0e}\"\n",
-    "    + \"/\"\n",
-    ")\n",
-    "FILE_EXT = \".pt\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "loaded_models = []\n",
-    "directory_path = DIRECTORY_PATH\n",
-    "file_list = os.listdir(directory_path)\n",
-    "model_files = [file for file in file_list if file.endswith(FILE_EXT)]\n",
-    "for model_file in model_files:\n",
-    "    model_name = model_file\n",
-    "    model = SimpleNet(X_test.shape[1], 1, torch.float32).to(device)\n",
-    "    print(model_file, end=\"\\r\")\n",
+    "\n",
+    "for constr, cb in constraints.items():\n",
+    "    DIRECTORY_PATH = (\n",
+    "        \"./utils/saved_models/\" + DATASET + \"/\" + constr + \"/\" + ((f\"{cb:.0E}\" + \"/\") if cb is not None else '')\n",
+    "    )\n",
+    "    FILE_EXT = \".pt\"\n",
+    "\n",
+    "    directory_path = DIRECTORY_PATH\n",
+    "    print(f\"Looking for models in: {directory_path}\")\n",
     "    try:\n",
-    "        model.load_state_dict(\n",
-    "            torch.load(\n",
-    "                directory_path + model_name, weights_only=False, map_location=device\n",
-    "            )\n",
-    "        )\n",
-    "    except:\n",
+    "        file_list = os.listdir(directory_path)\n",
+    "    except FileNotFoundError:\n",
+    "        print(\"Not found\")\n",
     "        continue\n",
-    "    model_file = str.join(\"\", model_file.split(\"_trial\")[:-1])\n",
-    "    loaded_models.append((model_file, model))"
+    "    model_files = [file for file in file_list if file.endswith(FILE_EXT)]\n",
+    "    for model_file in model_files:\n",
+    "        if model_file.split(\"_\")[0] not in dict_alg_names.keys():\n",
+    "            continue\n",
+    "        model_name = model_file\n",
+    "        model = SimpleNet(X_test.shape[1], 1, torch.float32).to(device)\n",
+    "        print(model_file)\n",
+    "        try:\n",
+    "            model.load_state_dict(\n",
+    "                torch.load(\n",
+    "                    directory_path + model_name, weights_only=False, map_location=device\n",
+    "                )\n",
+    "            )\n",
+    "        except:\n",
+    "            continue\n",
+    "        loaded_models.append((model_file, model))\n"
    ]
   },
   {
@@ -220,20 +200,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_df_train = make_model_stats_table(\n",
-    "    X_train_w, y_train_w, X_train_nw, y_train_nw, loaded_models\n",
-    ")\n",
+    "from itertools import combinations\n",
+    "import pandas as pd\n",
     "\n",
-    "train_df = aggregate_model_stats_table(res_df_train, \"mean\")\n",
-    "train_df_std = aggregate_model_stats_table(res_df_train, [\"mean\", \"std\"])\n",
-    "train_df_std"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Test set**:"
+    "bin_dfs = []\n",
+    "\n",
+    "for group_idx_1, group_idx_2 in list(combinations(group_ind_train, 2)):\n",
+    "    X_train_1, y_train_1 = X_train_tensor[group_idx_1], y_train_tensor[group_idx_1]\n",
+    "    X_train_2, y_train_2 = X_train_tensor[group_idx_2], y_train_tensor[group_idx_2]\n",
+    "    table = make_model_stats_table(\n",
+    "        X_train_1, y_train_1, X_train_2, y_train_2, loaded_models\n",
+    "    )\n",
+    "    table.index = table.Algorithm.apply(lambda x: dict_alg_names[x.split(\"_\")[0]])\n",
+    "    table.drop(\"Algorithm\", axis=1, inplace=True)\n",
+    "    bin_dfs.append(table)\n",
+    "    \n",
+    "df_train = pd.concat(bin_dfs, axis=0, keys=range(len(bin_dfs)), names=[\"constraint\"])"
    ]
   },
   {
@@ -242,13 +224,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_df_test = make_model_stats_table(\n",
-    "    X_test_w, y_test_w, X_test_nw, y_test_nw, loaded_models\n",
+    "train_df = aggregate_model_stats_table(\n",
+    "    df_train, \"mean\", agg_cols=[\"constraint\", \"Algorithm\"]\n",
     ")\n",
-    "\n",
-    "test_df = aggregate_model_stats_table(res_df_test, \"mean\")\n",
-    "test_df_std = aggregate_model_stats_table(res_df_test, [\"mean\", \"std\"])\n",
-    "test_df_std"
+    "train_df_std = aggregate_model_stats_table(\n",
+    "    df_train, [\"mean\", \"std\"], agg_cols=[\"constraint\", \"Algorithm\"]\n",
+    ")\n",
+    "train_df_std.drop(\"Algname\", axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df"
    ]
   },
   {
@@ -264,13 +255,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for model_name in test_df.index:\n",
-    "    alg_name = (\n",
-    "        \"sslalm_aug\"\n",
-    "        if model_name.startswith(\"sslalm_mu0\")\n",
-    "        else model_name.split(\"_\")[0]\n",
-    "    )\n",
-    "    os.makedirs(os.path.dirname(f\"./plots/{alg_name}/{DATASET}/\"), exist_ok=True)"
+    "# for model_name in test_df.index:\n",
+    "#     alg_name = model_name.split(\"_\")[0]\n",
+    "#     os.makedirs(os.path.dirname(f\"./plots/{alg_name}/{DATASET}/\"), exist_ok=True)"
    ]
   },
   {
@@ -282,8 +269,8 @@
     "from utils.plotting import spider_line\n",
     "\n",
     "\n",
-    "f = spider_line(train_df)\n",
-    "f = spider_line(test_df)"
+    "f = spider_line(train_df, yticks=[0,0.1,0.2,0.5])\n",
+    "# f = spider_line(test_df)"
    ]
   },
   {
@@ -299,22 +286,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions_0 = {}\n",
-    "predictions_1 = {}\n",
+    "predictions_by_alg = {alg: {} for alg in set([model_name.split(\"_\")[0] for model_name, _ in loaded_models])}\n",
     "\n",
-    "for model_name, model in loaded_models:\n",
-    "    preds_0 = torch.nn.functional.sigmoid(model(X_test_w)).detach().numpy()\n",
-    "    preds_1 = torch.nn.functional.sigmoid(model(X_test_nw)).detach().numpy()\n",
-    "    try:\n",
-    "        predictions_0[model_name].append(preds_0)\n",
-    "        predictions_1[model_name].append(preds_1)\n",
-    "    except:\n",
-    "        predictions_0[model_name] = [preds_0]\n",
-    "        predictions_1[model_name] = [preds_1]\n",
     "\n",
-    "for name in np.unique([name for name, _ in loaded_models]):\n",
-    "    predictions_0[name] = np.concatenate(predictions_0[name])\n",
-    "    predictions_1[name] = np.concatenate(predictions_1[name])"
+    "for i, group in enumerate(group_ind_test):\n",
+    "    for model_name, model in loaded_models:\n",
+    "        alg = model_name.split(\"_\")[0]\n",
+    "\n",
+    "        preds = torch.nn.functional.sigmoid(model(X_test_tensor[group])).detach().numpy().squeeze()\n",
+    "        try:\n",
+    "            predictions_by_alg[alg][i].append(preds)\n",
+    "        except:\n",
+    "            predictions_by_alg[alg][i] = [preds]\n",
+    "\n",
+    "    predictions_by_alg[alg][i] = np.concatenate(predictions_by_alg[alg][i])"
    ]
   },
   {
@@ -325,39 +310,30 @@
    "source": [
     "import seaborn as sns\n",
     "\n",
-    "for model_name in np.unique([name for name, _ in loaded_models]):\n",
-    "    # predictions_0 = torch.nn.functional.sigmoid(model(X_test_w)).detach().numpy()\n",
-    "    # predictions_1 = torch.nn.functional.sigmoid(model(X_test_nw)).detach().numpy()\n",
+    "fig, ax = plt.subplots(ncols=1)\n",
     "\n",
+    "for alg, predictions in predictions_by_alg.items():\n",
     "    sns.kdeplot(\n",
-    "        predictions_0[model_name].squeeze(),\n",
-    "        label=sensitive_value_0,\n",
-    "        color=\"blue\",\n",
+    "        predictions,\n",
     "        fill=True,\n",
+    "        alpha=0.1,\n",
     "        bw_adjust=0.4,\n",
-    "    )  # ,clip=[0,1],common_norm=True)\n",
-    "    sns.kdeplot(\n",
-    "        predictions_1[model_name].squeeze(),\n",
-    "        label=sensitive_value_1,\n",
-    "        color=\"red\",\n",
-    "        fill=True,\n",
-    "        bw_adjust=0.4,\n",
-    "    )  # ,clip=[0,1],common_norm=True)\n",
+    "        ax=ax,\n",
+    "        clip=[0,1],\n",
+    "        common_norm=False)\n",
     "    plt.xlim(-0.1, 1.1)\n",
-    "    plt.ylim(0, 22)\n",
+    "    plt.ylim(0, 10)\n",
     "    plt.xlabel(\"Predictions\", fontsize=20)\n",
     "    plt.ylabel(\"Density\", fontsize=20)\n",
-    "    # plt.title(model_name, fontsize=10)\n",
-    "    # plt.title(alg)\n",
-    "    # print(alg)\n",
+    "    plt.title(alg)\n",
     "    alg_name = (\n",
     "        \"sslalm_aug\"\n",
     "        if model_name.startswith(\"sslalm_mu0\")\n",
     "        else model_name.split(\"_\")[0]\n",
     "    )\n",
-    "    plt.savefig(f\"./plots/{alg_name}/{DATASET}/dist\")\n",
-    "    plt.legend()\n",
-    "    plt.show()"
+    "    # plt.savefig(f\"./plots/{alg_name}/{DATASET}/dist\")\n",
+    "    # plt.legend()\n",
+    "    # plt.show()"
    ]
   },
   {
@@ -392,9 +368,9 @@
    "outputs": [],
    "source": [
     "best_models = {}\n",
-    "algs = res_df_test.Algorithm.unique()\n",
+    "algs = df_train.index.get_level_values('Algorithm').unique()\n",
     "for alg in algs:\n",
-    "    alg_df = res_df_test[res_df_test.Algorithm == alg]\n",
+    "    alg_df = df_train.xs(alg, level=1)\n",
     "    if select_by == \"auc\":\n",
     "        model = loaded_models[alg_df.AUC_M.idxmax()]\n",
     "    elif select_by == \"wd\":\n",
@@ -428,7 +404,7 @@
     "    fpr, tpr, thresholds = roc_curve(targets, predictions)\n",
     "    roc_auc = auc(fpr, tpr)\n",
     "    # Plot ROC curve\n",
-    "    ax.plot(fpr, tpr, label=f\"Sensitive={sensitive_value}, AUC = {roc_auc:.2f}\")\n",
+    "    ax.plot(fpr, tpr, label=f\"group={sensitive_value}, AUC = {roc_auc:.2f}\")\n",
     "    tpr_minus_fpr = tpr - fpr\n",
     "    # Find the threshold that maximizes TPR - FPR difference\n",
     "    optimal_threshold_index = np.argmax(tpr_minus_fpr)\n",
@@ -436,30 +412,28 @@
     "    ax.scatter(\n",
     "        fpr[optimal_threshold_index],\n",
     "        tpr[optimal_threshold_index],\n",
-    "        c=\"blue\" if sensitive_value == sensitive_value_0 else \"red\",\n",
+    "        # c=\"blue\" if sensitive_value == sensitive_value_0 else \"red\",\n",
     "        label=f\"Optimal Threshold {sensitive_value} {optimal_threshold:.2f}\",\n",
     "    )\n",
     "\n",
     "\n",
     "for alg, (model_name, model) in best_models.items():\n",
     "    f = plt.figure()\n",
+    "    f.set_figwidth(20)\n",
+    "    f.set_figheight(20)\n",
     "    ax = f.subplots()\n",
     "    ax.set_title(alg)\n",
     "    with torch.inference_mode():\n",
-    "        predictions_0 = model(X_test_w)\n",
-    "        predictions_1 = model(X_test_nw)\n",
-    "        # Plot ROC for sensitive attribute A=0\n",
-    "        plot_roc_curve_pr(\n",
-    "            ax, predictions_0, y_test_w, sensitive_value=sensitive_value_0\n",
-    "        )\n",
-    "        # Plot ROC for sensitive attribute A=1\n",
-    "        plot_roc_curve_pr(\n",
-    "            ax, predictions_1, y_test_nw, sensitive_value=sensitive_value_1\n",
-    "        )\n",
-    "        ax.plot([0, 1], [0, 1], linestyle=\"--\", color=\"gray\", label=\"Random Classifier\")\n",
-    "        ax.set_xlabel(\"False Positive Rate\", fontsize=24)\n",
-    "        ax.set_ylabel(\"True Positive Rate\", fontsize=24)\n",
-    "        ax.legend()"
+    "        for i,group in enumerate(group_ind_test):\n",
+    "            predictions = model(X_test_tensor[group])\n",
+    "            # Plot ROC for sensitive attribute A=0\n",
+    "            plot_roc_curve_pr(\n",
+    "                ax, predictions, y_test[group], sensitive_value=i\n",
+    "            )\n",
+    "            ax.plot([0, 1], [0, 1], linestyle=\"--\", color=\"gray\", label=\"Random Classifier\")\n",
+    "            ax.set_xlabel(\"False Positive Rate\", fontsize=24)\n",
+    "            ax.set_ylabel(\"True Positive Rate\", fontsize=24)\n",
+    "            ax.legend()"
    ]
   },
   {
@@ -491,42 +465,40 @@
     "\n",
     "    tnr_minus_fnr = tnr - fnr\n",
     "\n",
-    "    # Find the threshold that maximizes TPR - FPR difference\n",
+    "    # Find the threshold that maximizes tnr - fnr difference\n",
     "    optimal_threshold_index = np.argmax(tnr_minus_fnr)\n",
     "    optimal_threshold = thresholds[optimal_threshold_index]\n",
     "    ax.scatter(\n",
-    "        tnr[optimal_threshold_index],\n",
     "        fnr[optimal_threshold_index],\n",
-    "        c=\"blue\" if sensitive_value == sensitive_value_0 else \"red\",\n",
+    "        tpr[optimal_threshold_index],\n",
+    "        # c=\"blue\" if sensitive_value == sensitive_value_0 else \"red\",\n",
     "        label=f\"Optimal Threshold {sensitive_value} {optimal_threshold:.2f}\",\n",
     "    )\n",
     "\n",
     "\n",
     "for alg, (model_name, model) in best_models.items():\n",
     "    f = plt.figure()\n",
+    "    f.set_figwidth(20)\n",
+    "    f.set_figheight(20)\n",
     "    ax = f.subplots()\n",
     "    ax.set_title(alg)\n",
     "    with torch.inference_mode():\n",
-    "        predictions_0 = model(X_test_w)\n",
-    "        predictions_1 = model(X_test_nw)\n",
-    "        # Plot ROC for sensitive attribute A=0\n",
-    "        plot_roc_curve_nr(\n",
-    "            ax, predictions_0, y_test_w, sensitive_value=sensitive_value_0\n",
-    "        )\n",
-    "        # Plot ROC for sensitive attribute A=1\n",
-    "        plot_roc_curve_nr(\n",
-    "            ax, predictions_1, y_test_nw, sensitive_value=sensitive_value_1\n",
-    "        )\n",
-    "        ax.plot([0, 1], [0, 1], linestyle=\"--\", color=\"gray\", label=\"Random Classifier\")\n",
-    "        ax.set_xlabel(\"False Negative Rate\", fontsize=24)\n",
-    "        ax.set_ylabel(\"True Negative Rate\", fontsize=24)\n",
-    "        ax.legend()"
+    "        for i,group in enumerate(group_ind_test):\n",
+    "            predictions = model(X_test_tensor[group])\n",
+    "            # Plot ROC for sensitive attribute A=0\n",
+    "            plot_roc_curve_nr(\n",
+    "                ax, predictions, y_test[group], sensitive_value=i\n",
+    "            )\n",
+    "            ax.plot([0, 1], [0, 1], linestyle=\"--\", color=\"gray\", label=\"Random Classifier\")\n",
+    "            ax.set_xlabel(\"False Negative Rate\", fontsize=24)\n",
+    "            ax.set_ylabel(\"True Negative Rate\", fontsize=24)\n",
+    "            ax.legend()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "humancompatible",
+   "display_name": "hc-dev",
    "language": "python",
    "name": "python3"
   },
@@ -539,8 +511,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.12"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
