--- a/algorithm_demo.ipynb
+++ b/algorithm_demo.ipynb
@@ -263,7 +263,37 @@
       "Epoch: 16, loss: 0.4051640779445214\n",
       "Epoch: 17, loss: 0.4038818087761423\n",
       "Epoch: 18, loss: 0.40338663783456596\n",
-      "Epoch: 19, loss: 0.40176192541340633\n"
+      "Epoch: 19, loss: 0.40176192541340633\n",
+      "Epoch: 20, loss: 0.4007976305271898\n",
+      "Epoch: 21, loss: 0.40091671312360894\n",
+      "Epoch: 22, loss: 0.40019975090399384\n",
+      "Epoch: 23, loss: 0.3993254276325128\n",
+      "Epoch: 24, loss: 0.3990602514240891\n",
+      "Epoch: 25, loss: 0.39761721761897206\n",
+      "Epoch: 26, loss: 0.3975723823865077\n",
+      "Epoch: 27, loss: 0.39697754393065615\n",
+      "Epoch: 28, loss: 0.3963453410126801\n",
+      "Epoch: 29, loss: 0.39607338504200534\n",
+      "Epoch: 30, loss: 0.39504804335800664\n",
+      "Epoch: 31, loss: 0.3942838875643377\n",
+      "Epoch: 32, loss: 0.3943626855699612\n",
+      "Epoch: 33, loss: 0.3941929980646819\n",
+      "Epoch: 34, loss: 0.3925179587677121\n",
+      "Epoch: 35, loss: 0.3928385819641075\n",
+      "Epoch: 36, loss: 0.3926107321333672\n",
+      "Epoch: 37, loss: 0.3921529855911753\n",
+      "Epoch: 38, loss: 0.39111863216385245\n",
+      "Epoch: 39, loss: 0.39101101238546626\n",
+      "Epoch: 40, loss: 0.39004249923995565\n",
+      "Epoch: 41, loss: 0.38968608109280467\n",
+      "Epoch: 42, loss: 0.3890957736875862\n",
+      "Epoch: 43, loss: 0.3887856855788933\n",
+      "Epoch: 44, loss: 0.38853218130368206\n",
+      "Epoch: 45, loss: 0.38814738153346945\n",
+      "Epoch: 46, loss: 0.38739122916013\n",
+      "Epoch: 47, loss: 0.3869896418015872\n",
+      "Epoch: 48, loss: 0.3868799282437457\n",
+      "Epoch: 49, loss: 0.386131253791973\n"
      ]
     }
    ],
@@ -309,17 +339,17 @@
      "text": [
       "TRAIN\n",
       "constraints (should be <= 0.05):\n",
-      "[0.095 0.018 0.016 0.033 0.167 0.071 0.077 0.111 0.062 0.073 0.024]\n",
-      "c mean: 0.06775714321569963\n",
-      "c min: 0.016223162412643433\n",
-      "c max: 0.167217418551445\n",
+      "[0.09  0.011 0.041 0.049 0.168 0.058 0.079 0.131 0.041 0.078 0.032]\n",
+      "c mean: 0.07068421894853766\n",
+      "c min: 0.01083877682685852\n",
+      "c max: 0.16823594272136688\n",
       "---\n",
-      "accuracy: 0.8080653038442754\n",
+      "accuracy: 0.815530593734738\n",
       "accuracy abs. difference:\n",
-      "[0.06  0.018 0.034 0.049 0.102 0.043 0.041 0.026 0.011 0.042 0.017]\n",
-      "acc abs dif mean: 0.04009534022582278\n",
-      "acc abs dif min: 0.010863328243680859\n",
-      "acc abs dif max: 0.10150114015345646\n"
+      "[0.055 0.007 0.01  0.039 0.098 0.034 0.048 0.065 0.016 0.043 0.021]\n",
+      "acc abs dif mean: 0.03959708931426114\n",
+      "acc abs dif min: 0.007040249118406505\n",
+      "acc abs dif max: 0.09811707556209193\n"
      ]
     }
    ],
@@ -340,17 +370,17 @@
      "text": [
       "TEST\n",
       "constraints (should be <= 0.05):\n",
-      "[0.053 0.067 0.228 0.061 0.008 0.088 0.12  0.281 0.114 0.044 0.035]\n",
-      "c mean: 0.10008202357725664\n",
-      "c min: 0.008452504873275757\n",
-      "c max: 0.28118374943733215\n",
+      "[0.037 0.064 0.401 0.064 0.034 0.084 0.101 0.438 0.102 0.004 0.047]\n",
+      "c mean: 0.12501090223138983\n",
+      "c min: 0.003509730100631714\n",
+      "c max: 0.43779516220092773\n",
       "---\n",
-      "accuracy: 0.7960379464285714\n",
+      "accuracy: 0.79296875\n",
       "accuracy abs. difference:\n",
-      "[0.066 0.041 0.044 0.065 0.068 0.033 0.107 0.11  0.131 0.002 0.033]\n",
-      "acc abs dif mean: 0.06366219568118937\n",
-      "acc abs dif min: 0.002419842710223774\n",
-      "acc abs dif max: 0.1308355634849837\n"
+      "[0.038 0.056 0.125 0.029 0.047 0.049 0.094 0.164 0.068 0.009 0.011]\n",
+      "acc abs dif mean: 0.06271492998802909\n",
+      "acc abs dif min: 0.008671103044968764\n",
+      "acc abs dif max: 0.16374269005847952\n"
      ]
     }
    ],
@@ -386,7 +416,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 9|   10|0.010|[ 0.863 -0.004 -0.003  0.012  0.129  0.867 -0.015 -0.001  0.042 -0.019  0.006  0.001  0.014 -0.005  0.070  0.021  0.005  0.099  0.008  0.134 -0.020]|[ 0.010  0.036 -0.019 -0.031 -0.002  0.030 -0.045 -0.036  0.018  0.065 -0.005 -0.016  0.001 -0.021  0.043 -0.035 -0.020  0.009  0.062  0.005 -0.043]|\r"
+      " 9|   55|0.010|[ 0.793 -0.012 -0.005  0.059  0.216  0.521 -0.001  0.013  0.142 -0.017 -0.004 -0.012  0.025  0.008 -0.010 -0.018  0.017  0.146  0.020  0.295 -0.013]|[-0.027 -0.039 -0.045  0.013  0.053  0.049 -0.005 -0.028  0.006 -0.034  0.018 -0.044 -0.046 -0.012  0.038 -0.048 -0.043 -0.007 -0.009 -0.043 -0.030]|\r"
      ]
     }
    ],
@@ -426,17 +456,17 @@
      "text": [
       "TRAIN\n",
       "constraints (should be <= 0.05):\n",
-      "[0.025 0.015 0.006 0.015 0.034 0.032 0.01  0.031 0.01  0.009 0.007]\n",
-      "c mean: 0.017789791930805553\n",
-      "c min: 0.0057291388511657715\n",
-      "c max: 0.03421226143836975\n",
+      "[0.032 0.017 0.001 0.02  0.033 0.035 0.015 0.034 0.013 0.001 0.003]\n",
+      "c mean: 0.018650136210701683\n",
+      "c min: 0.0010441243648529053\n",
+      "c max: 0.035471320152282715\n",
       "---\n",
-      "accuracy: 0.7881113514267774\n",
+      "accuracy: 0.7885997348775553\n",
       "accuracy abs. difference:\n",
-      "[0.042 0.021 0.015 0.048 0.101 0.042 0.021 0.057 0.006 0.059 0.001]\n",
-      "acc abs dif mean: 0.03766711719966409\n",
-      "acc abs dif min: 0.0005621398199636696\n",
-      "acc abs dif max: 0.1012649389813639\n"
+      "[0.071 0.023 0.004 0.074 0.113 0.045 0.048 0.067 0.003 0.043 0.026]\n",
+      "acc abs dif mean: 0.04679565636107975\n",
+      "acc abs dif min: 0.0030732423679527\n",
+      "acc abs dif max: 0.11312847709665674\n"
      ]
     }
    ],
@@ -457,17 +487,17 @@
      "text": [
       "TEST\n",
       "constraints (should be <= 0.05):\n",
-      "[0.009 0.033 0.067 0.054 0.017 0.044 0.042 0.076 0.063 0.007 0.035]\n",
-      "c mean: 0.04064829783006148\n",
-      "c min: 0.007393181324005127\n",
-      "c max: 0.07623636722564697\n",
+      "[0.016 0.027 0.082 0.052 0.017 0.047 0.042 0.097 0.068 0.001 0.031]\n",
+      "c mean: 0.04356678507544778\n",
+      "c min: 0.0011366009712219238\n",
+      "c max: 0.09749960899353027\n",
       "---\n",
-      "accuracy: 0.7893415178571429\n",
+      "accuracy: 0.7876674107142857\n",
       "accuracy abs. difference:\n",
-      "[0.019 0.032 0.045 0.042 0.028 0.042 0.051 0.026 0.061 0.009 0.023]\n",
-      "acc abs dif mean: 0.03461236005151578\n",
-      "acc abs dif min: 0.00907441016333943\n",
-      "acc abs dif max: 0.06125483199524229\n"
+      "[0.084 0.026 0.052 0.053 0.069 0.045 0.11  0.032 0.137 0.015 0.039]\n",
+      "acc abs dif mean: 0.06007948193801135\n",
+      "acc abs dif min: 0.014922363379713643\n",
+      "acc abs dif max: 0.13668351670135792\n"
      ]
     }
    ],
