--- a/constraint_demo.ipynb
+++ b/constraint_demo.ipynb
@@ -73,7 +73,7 @@
     {
      "data": {
       "text/plain": [
-       "[[tensor([0]), tensor([0])], [tensor([6]), tensor([1])]]"
+       "[[tensor([1, 4]), tensor([0, 0])], [tensor([5, 7]), tensor([1, 1])]]"
       ]
      },
      "execution_count": null,
