fix bug in notebooks

--- a/algorithm_demo.ipynb
+++ b/algorithm_demo.ipynb
@@ -113,7 +113,7 @@
    "source": [
     "from itertools import combinations\n",
     "from src.constraints.constraint import FairnessConstraint\n",
-    "from src.constraints.constraint_fns import loss_equality\n",
+    "from src.constraints.constraint_fns import abs_loss_equality\n",
     "\n",
     "# the protected attribute is \"Race\" (RAC1P)\n",
     "# we put a pairwise constraint on each combination of subgroups\n",
@@ -124,7 +124,7 @@
     "        dataset=dataset_train,\n",
     "        group_indices=[gr1, gr2],\n",
     "        # subtract bound from absolute loss difference to bring constraint to form $c \\leq 0$\n",
-    "        fn=lambda model, samples: torch.abs(loss_equality(torch.nn.BCEWithLogitsLoss(), model, samples)) - constraint_bound,\n",
+    "        fn=lambda model, samples: torch.abs(abs_loss_equality(torch.nn.BCEWithLogitsLoss(), model, samples)) - constraint_bound,\n",
     "        batch_size=c_batch_size,\n",
     "        seed=0\n",
     "    )\n",
@@ -143,12 +143,12 @@
    "source": [
     "# helper function to analyze model performance\n",
     "\n",
-    "def model_stats(model, features, labels, groups):\n",
+    "def model_stats(model, features, labels, groups, constraints):\n",
     "    with torch.inference_mode():\n",
     "        gr_ind = list(combinations(groups, 2))\n",
     "        vals = []\n",
     "        acc_dif = []\n",
-    "        for i, c in enumerate(constraints[::2]):\n",
+    "        for i, c in enumerate(constraints):\n",
     "            idx1, idx2 = gr_ind[i]\n",
     "            val = c.eval(model, [(features[idx1], labels[idx1]), (features[idx2], labels[idx2])]) + constraint_bound\n",
     "            vals.append(abs(val.numpy().item()))\n",
@@ -339,23 +339,25 @@
      "text": [
       "TRAIN\n",
       "constraints (should be <= 0.05):\n",
-      "[0.09  0.011 0.041 0.049 0.168 0.058 0.079 0.131 0.041 0.078 0.032]\n",
-      "c mean: 0.07068421894853766\n",
-      "c min: 0.01083877682685852\n",
-      "c max: 0.16823594272136688\n",
+      "[0.09  0.011 0.041 0.049 0.168 0.058 0.079 0.131 0.041 0.078 0.032 0.052\n",
+      " 0.038 0.157 0.047 0.09  0.209 0.098 0.12  0.009 0.111]\n",
+      "c mean: 0.08129547465415228\n",
+      "c min: 0.00882941484451294\n",
+      "c max: 0.20908750593662262\n",
       "---\n",
       "accuracy: 0.815530593734738\n",
       "accuracy abs. difference:\n",
-      "[0.055 0.007 0.01  0.039 0.098 0.034 0.048 0.065 0.016 0.043 0.021]\n",
-      "acc abs dif mean: 0.03959708931426114\n",
-      "acc abs dif min: 0.007040249118406505\n",
-      "acc abs dif max: 0.09811707556209193\n"
+      "[0.055 0.007 0.01  0.039 0.098 0.034 0.048 0.065 0.016 0.043 0.021 0.017\n",
+      " 0.032 0.091 0.027 0.049 0.108 0.044 0.059 0.005 0.064]\n",
+      "acc abs dif mean: 0.04437735514388773\n",
+      "acc abs dif min: 0.0050382808657633005\n",
+      "acc abs dif max: 0.10815173527037936\n"
      ]
     }
    ],
    "source": [
     "print('TRAIN')\n",
-    "model_stats(model_uncon, features_train, labels_train, group_indices_train)"
+    "model_stats(model_uncon, features_train, labels_train, group_indices_train, constraints)"
    ]
   },
   {
@@ -370,23 +372,25 @@
      "text": [
       "TEST\n",
       "constraints (should be <= 0.05):\n",
-      "[0.037 0.064 0.401 0.064 0.034 0.084 0.101 0.438 0.102 0.004 0.047]\n",
-      "c mean: 0.12501090223138983\n",
-      "c min: 0.003509730100631714\n",
-      "c max: 0.43779516220092773\n",
+      "[0.037 0.064 0.401 0.064 0.034 0.084 0.101 0.438 0.102 0.004 0.047 0.336\n",
+      " 0.    0.098 0.148 0.336 0.434 0.485 0.098 0.148 0.05 ]\n",
+      "c mean: 0.1671290709858849\n",
+      "c min: 0.00031441450119018555\n",
+      "c max: 0.48457854986190796\n",
       "---\n",
       "accuracy: 0.79296875\n",
       "accuracy abs. difference:\n",
-      "[0.038 0.056 0.125 0.029 0.047 0.049 0.094 0.164 0.068 0.009 0.011]\n",
-      "acc abs dif mean: 0.06271492998802909\n",
-      "acc abs dif min: 0.008671103044968764\n",
-      "acc abs dif max: 0.16374269005847952\n"
+      "[0.038 0.056 0.125 0.029 0.047 0.049 0.094 0.164 0.068 0.009 0.011 0.07\n",
+      " 0.026 0.103 0.105 0.096 0.172 0.174 0.076 0.078 0.002]\n",
+      "acc abs dif mean: 0.07587193386098348\n",
+      "acc abs dif min: 0.0020747748869247573\n",
+      "acc abs dif max: 0.17448856799037304\n"
      ]
     }
    ],
    "source": [
     "print('TEST')\n",
-    "model_stats(model_uncon, features_test, labels_test, group_indices_test)"
+    "model_stats(model_uncon, features_test, labels_test, group_indices_test, constraints)"
    ]
   },
   {
@@ -416,7 +420,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 9|   55|0.010|[ 0.793 -0.012 -0.005  0.059  0.216  0.521 -0.001  0.013  0.142 -0.017 -0.004 -0.012  0.025  0.008 -0.010 -0.018  0.017  0.146  0.020  0.295 -0.013]|[-0.027 -0.039 -0.045  0.013  0.053  0.049 -0.005 -0.028  0.006 -0.034  0.018 -0.044 -0.046 -0.012  0.038 -0.048 -0.043 -0.007 -0.009 -0.043 -0.030]|\r"
+      " 5|  374|0.010|[ 0.715  0.029  0.013  0.001  0.162  0.314  0.008  0.215  0.311 -0.012 -0.004 -0.023  0.106 -0.004  0.014 -0.016 -0.026  0.110  0.048  0.243  0.000]|[ 0.099 -0.043 -0.015  0.155 -0.004 -0.028  0.025  0.008 -0.031 -0.021 -0.048 -0.025  0.064  0.062 -0.018 -0.045  0.078 -0.012  0.006  0.069 -0.025]|\r"
      ]
     }
    ],
@@ -441,7 +445,7 @@
     "    constraints=constraints,\n",
     ")\n",
     "\n",
-    "history = optimizer.optimize(max_runtime=180,batch_size=32,seed=42)"
+    "history = optimizer.optimize(max_runtime=120,batch_size=32,seed=42)"
    ]
   },
   {
@@ -456,23 +460,25 @@
      "text": [
       "TRAIN\n",
       "constraints (should be <= 0.05):\n",
-      "[0.032 0.017 0.001 0.02  0.033 0.035 0.015 0.034 0.013 0.001 0.003]\n",
-      "c mean: 0.018650136210701683\n",
-      "c min: 0.0010441243648529053\n",
-      "c max: 0.035471320152282715\n",
+      "[0.025 0.018 0.006 0.015 0.036 0.033 0.007 0.03  0.01  0.011 0.008 0.023\n",
+      " 0.003 0.018 0.015 0.021 0.041 0.038 0.021 0.018 0.003]\n",
+      "c mean: 0.018929487182980494\n",
+      "c min: 0.00270998477935791\n",
+      "c max: 0.04117405414581299\n",
       "---\n",
-      "accuracy: 0.7885997348775553\n",
+      "accuracy: 0.784204283820554\n",
       "accuracy abs. difference:\n",
-      "[0.071 0.023 0.004 0.074 0.113 0.045 0.048 0.067 0.003 0.043 0.026]\n",
-      "acc abs dif mean: 0.04679565636107975\n",
-      "acc abs dif min: 0.0030732423679527\n",
-      "acc abs dif max: 0.11312847709665674\n"
+      "[0.066 0.034 0.009 0.071 0.115 0.045 0.032 0.057 0.005 0.049 0.021 0.025\n",
+      " 0.037 0.081 0.011 0.062 0.106 0.036 0.044 0.026 0.07 ]\n",
+      "acc abs dif mean: 0.04769086665847526\n",
+      "acc abs dif min: 0.005426801396574699\n",
+      "acc abs dif max: 0.11500768767965774\n"
      ]
     }
    ],
    "source": [
     "print('TRAIN')\n",
-    "model_stats(model, features_train, labels_train, group_indices_train)"
+    "model_stats(model, features_train, labels_train, group_indices_train, constraints)"
    ]
   },
   {
@@ -487,23 +493,25 @@
      "text": [
       "TEST\n",
       "constraints (should be <= 0.05):\n",
-      "[0.016 0.027 0.082 0.052 0.017 0.047 0.042 0.097 0.068 0.001 0.031]\n",
-      "c mean: 0.04356678507544778\n",
-      "c min: 0.0011366009712219238\n",
-      "c max: 0.09749960899353027\n",
+      "[0.017 0.017 0.074 0.049 0.027 0.043 0.034 0.091 0.066 0.01  0.026 0.056\n",
+      " 0.032 0.044 0.061 0.025 0.101 0.117 0.076 0.092 0.016]\n",
+      "c mean: 0.05112660498846145\n",
+      "c min: 0.01007753610610962\n",
+      "c max: 0.1168212890625\n",
       "---\n",
-      "accuracy: 0.7876674107142857\n",
+      "accuracy: 0.7837611607142857\n",
       "accuracy abs. difference:\n",
-      "[0.084 0.026 0.052 0.053 0.069 0.045 0.11  0.032 0.137 0.015 0.039]\n",
-      "acc abs dif mean: 0.06007948193801135\n",
-      "acc abs dif min: 0.014922363379713643\n",
-      "acc abs dif max: 0.13668351670135792\n"
+      "[0.095 0.017 0.057 0.013 0.063 0.044 0.113 0.038 0.109 0.032 0.052 0.074\n",
+      " 0.004 0.08  0.061 0.071 0.006 0.014 0.076 0.057 0.02 ]\n",
+      "acc abs dif mean: 0.05215174190194807\n",
+      "acc abs dif min: 0.003869420676876123\n",
+      "acc abs dif max: 0.11250258550986258\n"
      ]
     }
    ],
    "source": [
     "print('TEST')\n",
-    "model_stats(model, features_test, labels_test, group_indices_test)"
+    "model_stats(model, features_test, labels_test, group_indices_test, constraints)"
    ]
   }
  ],
