--- a/constraint_demo.ipynb
+++ b/constraint_demo.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "import torch\n",
     "from src.constraints.constraint import FairnessConstraint\n",
-    "from src.constraints.constraint_fns import loss_equality\n",
+    "from src.constraints.constraint_fns import abs_loss_equality\n",
     "\n",
     "# the toy dataset\n",
     "features = torch.arange(0,10)\n",
@@ -50,7 +50,7 @@
     "c = FairnessConstraint(\n",
     "    dataset=dataset,\n",
     "    group_indices=group_indices,\n",
-    "    fn=loss_equality,\n",
+    "    fn=abs_loss_equality,\n",
     "    batch_size=2,\n",
     "    seed=42\n",
     ")"
